DOC-29817 * Additional iframe class added to grid items, prevents read more links from hiding on smaller window sizes.

--- a/dcomms_theme/sass/components/grid-stream/_grid-stream.scss
+++ b/dcomms_theme/sass/components/grid-stream/_grid-stream.scss
@@ -84,6 +84,11 @@
   .read-more {
     @extend %grid-stream__item__read-more;
   }
+  &.grid-stream__item--iframe {
+    .read-more {
+      display: block;
+    }
+  }
 }
 
 .grid-stream__has-update,
